tests/ui/container_with_and_shrink.stderr
error: `with` and `shrink` are mutually exclusive on a container — `with = "mod"` already provides `shrink` via `mod::shrink`
 --> tests/ui/container_with_and_shrink.rs:4:1
  |
4 | #[quickcheck(with = "m", shrink = "s")]
  | ^
